force-app/main/default/objects/Related_Party__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Parties (Account)</relationshipLabel>
    <relationshipName>Related_Parties1</relationshipName>
    <type>Lookup</type>
</CustomField>