force-app/main/default/objects/Related_Party__c/fields/Associate_the_Representative__c.field-meta.xml
<CustomField>
    <fullName>Associate_the_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system will link the claimant account to the representative case role upon confirmation of the Related Party record.</description>
    <inlineHelpText>Please confirm the Advocate before confirming the Claimant so that the ability to associate the claimant and the advocate will not be adversely affected.</inlineHelpText>
    <label>Associate the Representative</label>
    <type>Checkbox</type>
</CustomField>