force-app/main/default/objects/Related_Party__c/fields/Brief_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Brief_Explanation__c</fullName>
    <label>Brief Explanation</label>
    <type>TextArea</type>
</CustomField>