force-app/main/default/objects/Related_Party__c/fields/Business_account__c.field-meta.xml
<CustomField>
    <fullName>Business_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to store the business account</description>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>