force-app/main/default/objects/Related_Party__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>