force-app/main/default/objects/Related_Party__c/fields/Community_User_Account__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Parties (Community User Account)</relationshipLabel>
    <relationshipName>Community_User_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>