force-app/main/default/objects/Related_Party__c/fields/Interpreter_Language__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Language__c</fullName>
    <label>Interpreter Language</label>
    <length>15</length>
    <type>Text</type>
</CustomField>