force-app/main/default/objects/Related_Party__c/fields/Issue_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Issue_Claimed__c</fullName>
    <label>Issue Claimed</label>
    <type>TextArea</type>
</CustomField>