force-app/main/default/objects/Related_Party__c/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAICS Code</label>
    <referenceTo>NAICS_Code__c</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>