force-app/main/default/objects/Related_Party__c/fields/Other_Claim_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Claim_Case_Number__c</fullName>
    <label>Other Claim Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>