force-app/main/default/objects/Related_Party__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Agent for Service of Process</fullName>
            </value>
            <value>
                <fullName>Aggrieved</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Attorney for Defendant</fullName>
            </value>
            <value>
                <fullName>Attorney for Plaintiff</fullName>
            </value>
            <value>
                <fullName>Attorney Representative</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Case Employer</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Claimant Advocate</fullName>
            </value>
            <value>
                <fullName>Claimant Attorney</fullName>
            </value>
            <value>
                <fullName>Claimant Guardian</fullName>
            </value>
            <value>
                <fullName>Claimant Minor</fullName>
            </value>
            <value>
                <fullName>Claimant Representative</fullName>
            </value>
            <value>
                <fullName>Client Employer</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>Contractor Successor</fullName>
            </value>
            <value>
                <fullName>Corporate Officer</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Defendant - (Restitution)</fullName>
            </value>
            <value>
                <fullName>Defendant - Agent for Service</fullName>
            </value>
            <value>
                <fullName>Defendant Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>