force-app/main/default/objects/Related_Party__c/fields/SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Text Message Opt Out</label>
    <type>Checkbox</type>
</CustomField>