force-app/main/default/objects/Related_Party__c/fields/VIPEmployee__c.field-meta.xml
<CustomField>
    <fullName>VIPEmployee__c</fullName>
    <formula>IF(RecordType.Name = "Employee", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Employee</label>
    <type>Checkbox</type>
</CustomField>