force-app/main/default/objects/Related_Party__c/fields/VIPEmployerCarryingOutChange__c.field-meta.xml
<CustomField>
    <fullName>VIPEmployerCarryingOutChange__c</fullName>
    <formula>IF(RecordType.Name = "Employer Carrying Out Change", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Employer Carrying Out Change</label>
    <type>Checkbox</type>
</CustomField>