force-app/main/default/objects/Related_Party__c/fields/VIPEmployerDWA__c.field-meta.xml
<CustomField>
    <fullName>VIPEmployerDWA__c</fullName>
    <formula>IF(RecordType.Name = "Employer DWA", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Employer DWA</label>
    <type>Checkbox</type>
</CustomField>