force-app/main/default/objects/Related_Party__c/fields/VIPWitness__c.field-meta.xml
<CustomField>
    <fullName>VIPWitness__c</fullName>
    <formula>IF(RecordType.Name = "Witness", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Witness</label>
    <type>Checkbox</type>
</CustomField>