force-app/main/default/objects/Related_Party__c/recordTypes/Advocate.recordType-meta.xml
<RecordType>
    <fullName>Advocate</fullName>
    <active>true</active>
    <label>Advocate</label>
</RecordType>