force-app/main/default/objects/Related_Party__c/recordTypes/Claimant.recordType-meta.xml
<RecordType>
    <fullName>Claimant</fullName>
    <active>true</active>
    <description>This is used for the Online Claim.</description>
    <label>Claimant</label>
</RecordType>