force-app/main/default/objects/Related_Party__c/recordTypes/Employer_Carrying_Out_Change.recordType-meta.xml
<RecordType>
    <fullName>Employer_Carrying_Out_Change</fullName>
    <active>true</active>
    <label>Employer Carrying Out Change</label>
</RecordType>