force-app/main/default/objects/Related_Party__c/recordTypes/Employer_DWA.recordType-meta.xml
<RecordType>
    <fullName>Employer_DWA</fullName>
    <active>true</active>
    <label>Employer DWA</label>
</RecordType>