force-app/main/default/objects/Related_Party__c/recordTypes/Potential_Defendant.recordType-meta.xml
<RecordType>
    <fullName>Potential_Defendant</fullName>
    <active>true</active>
    <label>Potential Defendant</label>
</RecordType>