force-app/main/default/objects/Related_Party__c/recordTypes/Witness.recordType-meta.xml
<RecordType>
    <fullName>Witness</fullName>
    <active>true</active>
    <label>Witness</label>
</RecordType>