force-app/main/default/objects/Related_Party__c/validationRules/WCA_Related_Party_Confirmed_Prevent_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>WCA_Related_Party_Confirmed_Prevent_Edit</fullName>
    <active>true</active>
    <description>Prevent WCA Users from modifying related party records that are in confirmed status.</description>
    <errorConditionFormula>AND($Profile.Name = "WCA User",  ISPICKVAL(PRIORVALUE(Status__c), "Confirm"), OR(RecordType.DeveloperName = "Potential_Defendant", RecordType.DeveloperName = "Claimant"))</errorConditionFormula>
    <errorMessage>WCA related party records with Status equal to confirm cannot be further modified.</errorMessage>
</ValidationRule>